--- a/ViteBusiness/Classes/Business/CryptoCurrencies/Grin/SlateViewController.xib
+++ b/ViteBusiness/Classes/Business/CryptoCurrencies/Grin/SlateViewController.xib
@@ -12,9 +12,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SlateViewController" customModule="ViteBusiness">
             <connections>
+                <outlet property="descriptionLabel" destination="87v-aq-uMf" id="R4l-7V-IJo"/>
+                <outlet property="operateButton" destination="Y1w-qk-JQd" id="6fh-cr-i2a"/>
                 <outlet property="slateIdLabel" destination="4lg-Gs-UIf" id="Rer-dm-byJ"/>
                 <outlet property="statusImageView" destination="6La-Nb-Y8u" id="wF5-LL-VjB"/>
                 <outlet property="tableView" destination="2Ee-kG-2aj" id="2DX-PA-xfo"/>
+                <outlet property="titleView" destination="flS-Rg-Z40" id="v1K-Ir-y7V"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -31,13 +34,13 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Make sure to share the transaction file with the recipient and ask for a confirmation file" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="87v-aq-uMf">
-                    <rect key="frame" x="61" y="70" width="284" height="29"/>
+                    <rect key="frame" x="36" y="82" width="317" height="29"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" red="0.24313725490196078" green="0.29019607843137252" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pfh-24-Wt0">
-                    <rect key="frame" x="24" y="144" width="327" height="328"/>
+                    <rect key="frame" x="24" y="156" width="327" height="328"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="初始化" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mlu-z2-RYy">
                             <rect key="frame" x="136" y="39" width="55.5" height="21"/>
@@ -48,16 +51,14 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2ME-Nb-2Ak">
                             <rect key="frame" x="0.0" y="77" width="327" height="76"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="foe-el-pJC">
-                                    <rect key="frame" x="35" y="14" width="33" height="16"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tx ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="foe-el-pJC">
+                                    <rect key="frame" x="22" y="16" width="31" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <color key="textColor" red="0.24313725490196078" green="0.29019607843137252" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="03715cf6-f29b-4a3a-bda5-b02cba6bf0d9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4lg-Gs-UIf">
-                                    <rect key="frame" x="35" y="38" width="251" height="16"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="03715cf6-f29b-4a3a-bda5-b02cba6bf0d9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4lg-Gs-UIf">
+                                    <rect key="frame" x="22" y="42" width="286" height="16"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="13"/>
                                     <color key="textColor" red="0.24313725489999999" green="0.2901960784" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
@@ -66,11 +67,20 @@
                             <color key="backgroundColor" red="0.0" green="0.47843137254901957" blue="1" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="76" id="A8i-OF-jIS"/>
+                                <constraint firstItem="foe-el-pJC" firstAttribute="top" secondItem="2ME-Nb-2Ak" secondAttribute="top" constant="16" id="CJr-mv-jZ5"/>
+                                <constraint firstItem="4lg-Gs-UIf" firstAttribute="top" secondItem="foe-el-pJC" secondAttribute="bottom" constant="10" id="KYM-Gc-7Y7"/>
+                                <constraint firstItem="4lg-Gs-UIf" firstAttribute="leading" secondItem="2ME-Nb-2Ak" secondAttribute="leading" constant="22" id="Ohk-DD-2Xc"/>
+                                <constraint firstAttribute="trailing" secondItem="4lg-Gs-UIf" secondAttribute="trailing" constant="19" id="Q4y-YD-wKB"/>
+                                <constraint firstItem="foe-el-pJC" firstAttribute="leading" secondItem="2ME-Nb-2Ak" secondAttribute="leading" constant="22" id="yvZ-No-hYO"/>
                             </constraints>
                         </view>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2Ee-kG-2aj">
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2Ee-kG-2aj">
                             <rect key="frame" x="0.0" y="153" width="327" height="175"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="yO6-NC-xaS"/>
+                                <outlet property="delegate" destination="-1" id="BUc-tH-281"/>
+                            </connections>
                         </tableView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -88,16 +98,22 @@
                     </constraints>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6La-Nb-Y8u">
-                    <rect key="frame" x="161" y="117.5" width="53" height="53"/>
+                    <rect key="frame" x="161" y="129.5" width="53" height="53"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="53" id="91B-Ev-ENP"/>
                         <constraint firstAttribute="height" constant="53" id="R0L-XA-C9y"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y1w-qk-JQd">
-                    <rect key="frame" x="168" y="588" width="46" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y1w-qk-JQd">
+                    <rect key="frame" x="24" y="593" width="327" height="50"/>
+                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="I9g-nX-Wje"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                    <state key="normal" title="Sign and share Transaction">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                     <connections>
                         <action selector="handleSlate:" destination="-1" eventType="touchUpInside" id="JOC-Kj-h8D"/>
                     </connections>
@@ -105,16 +121,19 @@
             </subviews>
             <color key="backgroundColor" red="0.97647058823529409" green="0.9882352941176471" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="87v-aq-uMf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="61" id="DG5-ul-q28"/>
+                <constraint firstItem="87v-aq-uMf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="36" id="DG5-ul-q28"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Y1w-qk-JQd" secondAttribute="bottom" constant="24" id="F1x-4t-jnK"/>
                 <constraint firstItem="flS-Rg-Z40" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="If2-qy-fi3"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Y1w-qk-JQd" secondAttribute="trailing" constant="24" id="PTr-4J-1AZ"/>
                 <constraint firstItem="Pfh-24-Wt0" firstAttribute="top" secondItem="87v-aq-uMf" secondAttribute="bottom" constant="45" id="Qr6-OR-cAz"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="flS-Rg-Z40" secondAttribute="trailing" id="TdB-L3-E9P"/>
                 <constraint firstItem="6La-Nb-Y8u" firstAttribute="centerX" secondItem="Pfh-24-Wt0" secondAttribute="centerX" id="Toy-zf-7Jc"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Pfh-24-Wt0" secondAttribute="trailing" constant="24" id="ZhU-1a-EcY"/>
                 <constraint firstItem="flS-Rg-Z40" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="bO0-HR-AeK"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="87v-aq-uMf" secondAttribute="trailing" constant="30" id="d3N-UF-rZW"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="87v-aq-uMf" secondAttribute="trailing" constant="22" id="d3N-UF-rZW"/>
                 <constraint firstItem="Pfh-24-Wt0" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="24" id="egi-se-U5e"/>
-                <constraint firstItem="87v-aq-uMf" firstAttribute="top" secondItem="flS-Rg-Z40" secondAttribute="bottom" id="r88-yd-Olo"/>
+                <constraint firstItem="Y1w-qk-JQd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="24" id="kSZ-Q1-MtG"/>
+                <constraint firstItem="87v-aq-uMf" firstAttribute="top" secondItem="flS-Rg-Z40" secondAttribute="bottom" constant="12" id="r88-yd-Olo"/>
                 <constraint firstItem="6La-Nb-Y8u" firstAttribute="centerY" secondItem="Pfh-24-Wt0" secondAttribute="top" id="sbz-5i-9Fn"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
