--- a/ViteBusiness/Classes/Business/CryptoCurrencies/Grin/GrinInfo.storyboard
+++ b/ViteBusiness/Classes/Business/CryptoCurrencies/Grin/GrinInfo.storyboard
@@ -105,7 +105,7 @@
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Foe-va-PhD">
                                         <rect key="frame" x="163" y="164" width="1" height="30"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.16925299657534246" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.14621682363013699" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="1" id="zmh-A1-NtX"/>
                                         </constraints>
@@ -192,6 +192,7 @@
                     <connections>
                         <outlet property="awaitingCountLable" destination="KLz-YT-7vq" id="EqZ-2m-5pP"/>
                         <outlet property="grinCardBgView" destination="jJb-g3-lQ7" id="vO4-66-VRb"/>
+                        <outlet property="lineImageVIew" destination="V3w-lm-wW4" id="vH2-mJ-z3U"/>
                         <outlet property="lockedCountLabel" destination="FIR-Wa-Bai" id="f1T-7S-sOI"/>
                         <outlet property="lockedTitleLabel" destination="CMr-Qa-D2T" id="fKQ-UH-DtE"/>
                         <outlet property="spendableAcountLabel" destination="7a7-bK-pCP" id="xQO-3a-vG7"/>
@@ -216,6 +217,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="N0q-Xq-IAF">
+                                <rect key="frame" x="24" y="86" width="327" height="76"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="76" id="que-5F-yBm"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vm7-B2-Tj4">
+                                <rect key="frame" x="24" y="86" width="3" height="76"/>
+                                <color key="backgroundColor" red="0.45882352939999999" green="0.60784313729999995" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="76" id="O0y-Xw-TCO"/>
+                                    <constraint firstAttribute="width" constant="3" id="tPJ-i7-K2B"/>
+                                </constraints>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cvv-74-G0V">
                                 <rect key="frame" x="43" y="102" width="54" height="16"/>
                                 <string key="text">可用余额
@@ -230,20 +245,6 @@
                                 <color key="textColor" red="0.24313725489999999" green="0.2901960784" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vm7-B2-Tj4">
-                                <rect key="frame" x="24" y="86" width="3" height="76"/>
-                                <color key="backgroundColor" red="0.45882352939999999" green="0.60784313729999995" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="76" id="O0y-Xw-TCO"/>
-                                    <constraint firstAttribute="width" constant="3" id="tPJ-i7-K2B"/>
-                                </constraints>
-                            </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="N0q-Xq-IAF">
-                                <rect key="frame" x="24" y="86" width="327" height="76"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="76" id="que-5F-yBm"/>
-                                </constraints>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ICx-r9-Cqy" customClass="GrinTransactionTitleView" customModule="ViteBusiness" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -434,6 +435,7 @@
                         <outlet property="addressTextField" destination="yY1-dT-H6R" id="IlQ-gl-Jt4"/>
                         <outlet property="amountConstraint" destination="GQ4-UV-cJ8" id="Maz-av-AHi"/>
                         <outlet property="amountTextField" destination="MAh-6c-1Sa" id="oP7-6A-s4f"/>
+                        <outlet property="balanceBackground" destination="N0q-Xq-IAF" id="vny-kz-Yre"/>
                         <outlet property="feeLabel" destination="Hay-0o-J1E" id="cLc-JV-yKK"/>
                         <outlet property="spendableLabel" destination="FNI-LU-wil" id="Kfb-9j-vMQ"/>
                         <outlet property="titleView" destination="ICx-r9-Cqy" id="BYj-Ft-h44"/>
