--- a/ViteBusiness/Classes/Business/CryptoCurrencies/Grin/GrinTeachViewController.xib
+++ b/ViteBusiness/Classes/Business/CryptoCurrencies/Grin/GrinTeachViewController.xib
@@ -25,6 +25,7 @@
                 <outlet property="settingButton" destination="nlr-25-Ef7" id="tIt-Uu-gT9"/>
                 <outlet property="titleLabel" destination="zSJ-q4-nDe" id="thI-MZ-qCp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="viteInfoButton" destination="pgl-Iz-sxa" id="CvK-ND-LqB"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -110,7 +111,7 @@
                                 <constraint firstAttribute="height" constant="32" id="PAV-Sf-rlK"/>
                                 <constraint firstAttribute="width" constant="70" id="d8o-pj-6m3"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                             <state key="normal" title="   Copy   "/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -121,10 +122,13 @@
                                 <action selector="copyAction:" destination="-1" eventType="touchUpInside" id="xd6-g2-PEv"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" vite_xxxxxxxxxxxxx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vk3-Lw-Lnc">
-                            <rect key="frame" x="24" y="34" width="247" height="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vk3-Lw-Lnc">
+                            <rect key="frame" x="24" y="34" width="247" height="20"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="w6v-Ae-iHp"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                             <userDefinedRuntimeAttributes>
@@ -133,14 +137,27 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pgl-Iz-sxa">
+                            <rect key="frame" x="78" y="12.5" width="16" height="16"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="16" id="QkB-qT-Xca"/>
+                                <constraint firstAttribute="width" constant="16" id="WoY-9q-ASc"/>
+                            </constraints>
+                            <state key="normal" image="infor_white"/>
+                            <connections>
+                                <action selector="didClickedViteInfoButton:" destination="-1" eventType="touchUpInside" id="NiI-7L-OCg"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="pgl-Iz-sxa" firstAttribute="leading" secondItem="o6G-c0-TfG" secondAttribute="trailing" constant="4" id="0f1-xy-k0j"/>
                         <constraint firstItem="Vk3-Lw-Lnc" firstAttribute="top" secondItem="o6G-c0-TfG" secondAttribute="bottom" constant="6" id="68k-SN-Sex"/>
                         <constraint firstItem="Vk3-Lw-Lnc" firstAttribute="leading" secondItem="dz4-UC-bLN" secondAttribute="leading" constant="24" id="GFa-Hu-fa2"/>
                         <constraint firstItem="o6G-c0-TfG" firstAttribute="top" secondItem="dz4-UC-bLN" secondAttribute="top" constant="13" id="KkO-mr-JCE"/>
                         <constraint firstItem="ujh-FU-49L" firstAttribute="leading" secondItem="Vk3-Lw-Lnc" secondAttribute="trailing" constant="10" id="Odb-Kz-BEt"/>
                         <constraint firstItem="o6G-c0-TfG" firstAttribute="leading" secondItem="dz4-UC-bLN" secondAttribute="leading" constant="24" id="Vzv-vu-dLd"/>
+                        <constraint firstItem="pgl-Iz-sxa" firstAttribute="centerY" secondItem="o6G-c0-TfG" secondAttribute="centerY" id="aQT-5W-pL6"/>
                         <constraint firstAttribute="trailing" secondItem="ujh-FU-49L" secondAttribute="trailing" constant="24" id="eAK-80-ucF"/>
                         <constraint firstAttribute="height" constant="108" id="lbl-N0-QWW"/>
                         <constraint firstItem="ujh-FU-49L" firstAttribute="top" secondItem="dz4-UC-bLN" secondAttribute="top" constant="18" id="wc7-P5-8zY"/>
@@ -160,7 +177,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sbt-iZ-DYC">
-                    <rect key="frame" x="21" y="337.5" width="6" height="6"/>
+                    <rect key="frame" x="24" y="337.5" width="6" height="6"/>
                     <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="6" id="L2a-5Z-qKn"/>
@@ -194,6 +211,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="6hS-Mc-GtM"/>
                     </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                     <state key="normal" title="I know">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
@@ -217,7 +235,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="cIK-vF-Eft" secondAttribute="trailing" constant="24" id="5Fc-dX-Gou"/>
                 <constraint firstItem="7qi-lF-cto" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="24" id="7JN-hJ-ctB"/>
                 <constraint firstItem="7qi-lF-cto" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="18" id="A4t-UG-lyK"/>
-                <constraint firstItem="Sbt-iZ-DYC" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="21" id="HKL-Do-CEs"/>
+                <constraint firstItem="Sbt-iZ-DYC" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="24" id="HKL-Do-CEs"/>
                 <constraint firstItem="Hpq-hD-EPO" firstAttribute="top" secondItem="ybb-yV-Hnh" secondAttribute="bottom" constant="14" id="Hnq-zo-lsF"/>
                 <constraint firstItem="Q7w-yq-fXe" firstAttribute="leading" secondItem="nlr-25-Ef7" secondAttribute="trailing" constant="3" id="I4w-nS-u34"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="cIK-vF-Eft" secondAttribute="bottom" id="K6P-C5-TXH"/>
@@ -241,6 +259,7 @@
     </objects>
     <resources>
         <image name="grin_tx_vite" width="327" height="248"/>
+        <image name="infor_white" width="16" height="16"/>
         <image name="selected" width="12" height="12"/>
         <image name="unselected" width="12" height="12"/>
     </resources>
