--- a/ViteBusiness/Classes/Business/CryptoCurrencies/Grin/GrinTeachViewController.xib
+++ b/ViteBusiness/Classes/Business/CryptoCurrencies/Grin/GrinTeachViewController.xib
@@ -90,7 +90,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't see again" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q7w-yq-fXe">
-                    <rect key="frame" x="47" y="454.5" width="100" height="17"/>
+                    <rect key="frame" x="39" y="450.5" width="100" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" red="0.24313725490196078" green="0.29019607843137252" blue="0.34901960784313724" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -190,15 +190,15 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nlr-25-Ef7">
-                    <rect key="frame" x="24" y="453" width="20" height="20"/>
+                    <rect key="frame" x="24" y="453" width="12" height="12"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="20" id="3BH-eQ-Atr"/>
-                        <constraint firstAttribute="height" constant="20" id="RnP-Rc-UKp"/>
+                        <constraint firstAttribute="width" constant="12" id="3BH-eQ-Atr"/>
+                        <constraint firstAttribute="height" constant="12" id="RnP-Rc-UKp"/>
                     </constraints>
-                    <state key="normal" image="unselected">
+                    <state key="normal" backgroundImage="unselected">
                         <color key="titleColor" red="0.24313725490196078" green="0.29019607843137252" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
-                    <state key="selected" image="selected">
+                    <state key="selected" backgroundImage="selected">
                         <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
